some css changing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <div class="cont-form">
         <div class="flex-section">
-          <img src="./image/image17.jpg" />
+          <img src="./image/image177.jpg" />
 
           <div class="whatsapp">
             <i class="fab fa-whatsapp"></i>
@@ -36,7 +36,7 @@
               <label for="name">TU NOMBRE</label>
               <input type="text" id="name" name="name" required />
 
-              <label for="email">Email</label>
+              <label for="email">E-MAIL</label>
               <input type="email" id="email" name="email" required />
 
               <label for="whatsapp">TU NUMERO DE WHATSAPP(OPCIONAL)</label>
